Fix paragraph spacing

--- a/css/default.css
+++ b/css/default.css
@@ -42,7 +42,8 @@ body {
 }
 
 p {
-  margin-bottom: 50px;
+  margin: 0px;
+  padding-bottom: 20px;
 }
 
 h1, h2, h3 {
@@ -70,6 +71,7 @@ h3 {
   text-align: right;
   color: #777;
   font-weight: 200;
+  margin-bottom: 20px;
 }
 
 a {
